--- a/Basic/src/main/res/layout/progress_bar.xml
+++ b/Basic/src/main/res/layout/progress_bar.xml
@@ -21,7 +21,7 @@
             android:id="@+id/tvMsg"
             android:text="正在为您屏蔽\n无用信息..."
             android:textSize="@dimen/text_size_3"
-            android:textColor="@color/text_color_5"
+            android:textColor="@color/colorAccent"
             android:gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"/>
