--- a/Basic/src/main/res/values/colors.xml
+++ b/Basic/src/main/res/values/colors.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!--http://tool.c7sky.com/webcolor/#character_0-->
-    <color name="colorPrimary">#666699</color>
-    <color name="colorPrimaryDark">#FFFFFF</color>
-    <color name="colorAccent">#FF9999</color>
-
-    <color name="text_color_1">#D3D3D3</color>
-    <color name="text_color_2">#ABABAB</color>
-    <color name="text_color_3">#919191</color>
-    <color name="text_color_4">#5F5F5F</color>
-    <color name="text_color_5">#3D3D3D</color>
-
     <!-- 书封，广告等图片默认 Loading色 -->
     <color name="localstore_img_loading">#f2f2f2</color>
+
+
+    <!--http://tool.c7sky.com/webcolor/#character_0-->
+    <color name="colorPrimary">@color/primaryColor</color>
+    <color name="colorPrimaryDark">@color/primaryDarkColor</color>
+    <color name="colorAccent">@color/primaryLightColor</color>
 </resources>
