--- a/app/src/main/res/layout/hot_search_fragment.xml
+++ b/app/src/main/res/layout/hot_search_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <include layout="@layout/wb_list_layout"/>
+    <include layout="@layout/hot_search_list_layout"/>
 
     <include layout="@layout/layout_float_button"/>
 
