--- a/List/src/main/res/layout/localstore_loading.xml
+++ b/List/src/main/res/layout/localstore_loading.xml
@@ -11,6 +11,7 @@
         android:id="@+id/default_progress"
         style="@android:style/Widget.Material.ProgressBar"
         android:layout_centerHorizontal="true"
+        android:indeterminateTint="@color/colorPrimary"
         android:visibility="visible"
         android:layout_height="50dp"
         android:layout_width="50dp" />
