--- a/app/src/main/res/layout/hot_search_titler.xml
+++ b/app/src/main/res/layout/hot_search_titler.xml
@@ -16,7 +16,7 @@
             android:layout_height="35dp"
             android:transitionName="anim_weibo_img"
             android:layout_marginStart="10dp"
-            tools:src="@drawable/ic_launch"
+            android:src="@drawable/ic_launch"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:scaleType="centerInside"/>
