--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -5,12 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <include
-        android:id="@+id/common_titler"
+        android:id="@+id/common_title"
         layout="@layout/hot_search_titler"
         android:visibility="visible" />
     <com.lulu.hotsearch.view.HotSearchWebView
         android:id="@+id/webView"
-        app:layout_constraintTop_toBottomOf="@id/common_titler"
+        app:layout_constraintTop_toBottomOf="@id/common_title"
         app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="match_parent"
