--- a/app/src/main/res/layout/hot_search_titler.xml
+++ b/app/src/main/res/layout/hot_search_titler.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/common_titler"
+    android:id="@+id/common_title"
     android:fitsSystemWindows="true"
     android:layout_width="fill_parent" android:layout_height="wrap_content">
     <!--android:background="@drawable/common_title_bar_bg_shape"-->
