--- a/app/src/main/res/layout/hot_search_list_layout.xml
+++ b/app/src/main/res/layout/hot_search_list_layout.xml
@@ -7,7 +7,7 @@
 
     <include
         android:id="@+id/common_title"
-        layout="@layout/hot_search_titler"
+        layout="@layout/hot_search_title"
         android:visibility="visible" />
 
     <RelativeLayout
