--- a/app/src/main/res/layout/hot_search_title.xml
+++ b/app/src/main/res/layout/hot_search_title.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/common_title"
     android:fitsSystemWindows="true"
-    android:background="@color/primaryColor"
-    android:layout_width="fill_parent" android:layout_height="wrap_content">
+    android:background="@color/primaryLightColor"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content">
     <!--android:background="@drawable/common_title_bar_bg_shape"-->
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="fill_parent"
         android:layout_height="?attr/actionBarSize">
 
@@ -16,13 +17,53 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:transitionName="anim_weibo_img"
-            android:layout_marginStart="10dp"
             tools:src="@drawable/ic_launch"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:scaleType="centerInside"/>
 
         <TextView
+            android:id="@+id/profile_header_title"
+            android:layout_marginStart="5dp"
+            android:layout_width="0dp"
+            app:layout_constraintEnd_toStartOf="@id/rightImage"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:transitionName="anim_weibo_item"
+            android:textColor="@color/primaryTextColor"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/leftImage"
+            android:textStyle="bold"
+            android:textSize="18dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            tools:text="哈哈哈哈" />
+
+
+
+        <ImageView
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/rightImage"
+            tools:visibility="visible"
+            android:visibility="visible"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:clickable="true"
+            android:background="?android:attr/selectableItemBackground"
+            android:src="@drawable/ic_more_vert_black_24dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:scaleType="centerInside"
+            app:tint="@color/primaryTextColor" />
+
+
+        <TextView
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/rightImage"
             android:id="@+id/title_right_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -32,7 +73,7 @@
             android:textColor="@color/primaryTextColor"
             android:textStyle="bold"
             android:textSize="@dimen/text_size_2"
-            android:layout_marginBottom="2dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginEnd="10dp"
             android:visibility="gone"
             tools:visibility="visible"
@@ -42,48 +83,7 @@
             style="@style/TextAppearance.AppCompat.Body2"
             tools:text="休息休息12:09" />
 
-        <RelativeLayout
-            android:id="@+id/ll_profile_header_title"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_toStartOf="@id/title_right_time"
-            android:layout_toEndOf="@id/leftImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true">
 
-
-            <TextView
-                android:id="@+id/profile_header_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:transitionName="anim_weibo_item"
-                android:textColor="@color/primaryTextColor"
-                android:textStyle="bold"
-                android:textSize="18dp"
-                android:maxLines="1"
-                android:ellipsize="end"
-                tools:text="哈哈哈哈" />
-
-
-        </RelativeLayout>
-
-        <ImageView
-            android:id="@+id/rightImage"
-            tools:visibility="visible"
-            android:visibility="gone"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:src="@drawable/ic_close_24px"
-
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:scaleType="centerInside"
-            app:tint="@color/primaryTextColor" />
-
-
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.appcompat.widget.Toolbar>
