--- a/app/src/main/res/layout/hot_search_item.xml
+++ b/app/src/main/res/layout/hot_search_item.xml
@@ -10,11 +10,12 @@
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/itemContainer"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:background="@drawable/bg_item_sel">
+        android:background="@drawable/bg_item_ripple">
 
         <TextView
             android:id="@+id/hotIndex"
