--- a/app/src/main/res/layout/layout_float_button.xml
+++ b/app/src/main/res/layout/layout_float_button.xml
@@ -25,7 +25,7 @@
         android:layout_marginBottom="20dp"
         app:fabSize="normal"
         app:elevation="5dp"
-        app:backgroundTint="@color/primaryColor"
+        app:backgroundTint="@color/primaryLightColor"
         app:rippleColor="@color/primaryColor"
         />
 </RelativeLayout>
