--- a/SkinRes/src/main/res/values/styles.xml
+++ b/SkinRes/src/main/res/values/styles.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="CommonAlertDialogStyle" parent="@style/Theme.MaterialComponents.Dialog.Alert">
+        <!--按钮颜色-->
         <item name="android:textColor">#FF00FF00</item>
+        <!--背景色-->
         <item name="android:background">@color/primaryColor</item>
-        <item name="colorAccent">@color/primaryLightColor</item>
     </style>
+
 </resources>
