--- a/SkinRes/src/main/res/values/colors.xml
+++ b/SkinRes/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="primaryLightColor">#484848</color>
     <color name="primaryDarkColor">#000000</color>
     <color name="primaryTextColor">#ffffff</color>
+    <color name="primaryTextDisableColor">#5bffffff</color>
 
     <color name="item_title">@color/primaryLightColor</color>
     <color name="item_tag">#FF216C</color>
