--- a/app/src/main/res/color/text_color_sel.xml
+++ b/app/src/main/res/color/text_color_sel.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#9E9E9E" android:state_enabled="false"/>
-    <item android:color="#FF000000"/>
+    <item android:color="@color/primaryTextDisableColor" android:state_enabled="false"/>
+    <item android:color="@color/primaryTextColor"/>
 </selector>
