--- a/app/src/main/res/layout/hot_search_title.xml
+++ b/app/src/main/res/layout/hot_search_title.xml
@@ -12,7 +12,7 @@
         android:layout_width="fill_parent"
         android:layout_height="?attr/actionBarSize">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/leftImage"
             android:layout_width="35dp"
             android:layout_height="35dp"
@@ -43,7 +43,7 @@
 
 
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
