--- a/app/src/main/res/layout/hot_search_item.xml
+++ b/app/src/main/res/layout/hot_search_item.xml
@@ -35,7 +35,7 @@
             android:maxLines="1"
             android:paddingStart="10dp"
             android:paddingEnd="5dp"
-            android:textColor="@color/item_title"
+            android:textColor="@color/primaryBodyTextColor"
             android:textSize="@dimen/text_size_3"
             android:transitionName="anim_weibo_item"
             app:layout_constraintStart_toEndOf="@id/hotIndex"
@@ -49,7 +49,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/hotTag"
             tools:text="1232354"
-            android:textColor="@color/item_title"
+            android:textColor="@color/primaryBodyTextColor"
             android:textSize="@dimen/text_size_2"
             android:layout_marginEnd="5dp"
             android:layout_width="wrap_content"
