添加 beauty 皮肤包

--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -26,7 +26,7 @@
         tools:visibility="visible"
         android:src="@drawable/ic_open"
         android:tintMode="src_in"
-        android:tint="#FFF"
+        android:tint="@color/primaryTextColor"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="60dp"
         app:fabSize="normal"
@@ -43,8 +43,8 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivRefreshBtn"
-            android:src="@drawable/ic_refresh_24px"
-            android:tint="@color/primaryTextColor"
+            android:background="@drawable/ic_refresh_24px"
+            android:backgroundTint="@color/primaryTextColor"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -68,6 +68,7 @@
             android:id="@+id/ivPre"
             android:background="@drawable/ic_navigate_before_24px"
             app:layout_constraintTop_toTopOf="parent"
+            android:backgroundTint="@color/primaryTextColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/ivNext"
             android:layout_marginEnd="10dp"
@@ -78,6 +79,7 @@
             android:id="@+id/ivNext"
             android:background="@drawable/ic_navigate_next_24px"
             app:layout_constraintTop_toTopOf="parent"
+            android:backgroundTint="@color/primaryTextColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="10dp"
