--- a/Basic/src/main/res/layout/progress_bar.xml
+++ b/Basic/src/main/res/layout/progress_bar.xml
@@ -14,14 +14,14 @@
         <ProgressBar
             android:id="@+id/progress"
             style="?android:attr/progressBarStyle"
-            android:indeterminateTint="@color/primaryLightColor"
+            android:indeterminateTint="@color/primaryColor"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"/>
         <TextView
             android:id="@+id/tvMsg"
             android:text="正在为您屏蔽\n无用信息..."
             android:textSize="@dimen/text_size_3"
-            android:textColor="@color/primaryLightColor"
+            android:textColor="@color/primaryColor"
             android:gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"/>
