--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -30,14 +30,14 @@
         android:layout_marginRight="15dp"
         android:layout_marginBottom="60dp"
         app:fabSize="normal"
-        app:backgroundTint="@color/primaryLightColor"
+        app:backgroundTint="@color/primaryColor"
         app:rippleColor="@color/primaryColor"
         />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottomPanel"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/primaryLightColor"
+        android:background="@color/primaryColor"
         android:layout_width="match_parent"
         android:layout_height="48dp">
 
