--- a/app/src/main/res/layout/hot_search_item.xml
+++ b/app/src/main/res/layout/hot_search_item.xml
@@ -21,8 +21,9 @@
             android:id="@+id/hotIndex"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/primaryLightColor"
+            android:textColor="@color/primaryColor"
             android:textSize="@dimen/text_size_5"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="1" />
