--- a/app/src/main/res/layout/hot_search_title.xml
+++ b/app/src/main/res/layout/hot_search_title.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/common_title"
     android:fitsSystemWindows="true"
-    android:background="@color/primaryLightColor"
+    android:background="@color/primaryColor"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
     <!--android:background="@drawable/common_title_bar_bg_shape"-->
