--- a/app/src/main/res/layout/layout_float_button.xml
+++ b/app/src/main/res/layout/layout_float_button.xml
@@ -21,7 +21,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:src="@drawable/ic_add_24px"
-        android:tint="@color/primaryTextColor"
+        app:tint="@color/primaryTextColor"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="20dp"
         app:fabSize="normal"
