--- a/SkinRes/src/main/res/drawable/bg_item_ripple.xml
+++ b/SkinRes/src/main/res/drawable/bg_item_ripple.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="@color/primaryColor">
-    <item>
+    <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
 
-            <solid android:color="@color/primaryTextColor"/>
+            <solid android:color="#FFFFFF"/>
         </shape>
     </item>
 </ripple>
