--- a/app/src/main/res/layout/hot_search_web_title.xml
+++ b/app/src/main/res/layout/hot_search_web_title.xml
@@ -11,15 +11,16 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:paddingStart="@dimen/title_start_end"
         android:paddingEnd="@dimen/title_start_end"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/leftImage"
             android:layout_width="@dimen/ic_weight_height"
             android:layout_height="@dimen/ic_weight_height"
-            android:transitionName="anim_weibo_img"
-            tools:src="@drawable/ic_launch"
+            android:background="?android:attr/selectableItemBackground"
+            android:src="@drawable/ic_close_24px"
+            android:tint="@color/primaryTextColor"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -51,7 +52,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/rightImage"
             tools:visibility="visible"
-            android:visibility="visible"
+            android:visibility="gone"
             android:layout_width="@dimen/ic_weight_height"
             android:layout_height="@dimen/ic_weight_height"
             android:clickable="true"
@@ -62,28 +63,6 @@
             android:scaleType="centerInside"
             app:tint="@color/primaryTextColor" />
 
-
-        <TextView
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/rightImage"
-            android:id="@+id/title_right_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:transitionName="anim_weibo_item"
-            android:layout_alignParentEnd="true"
-            android:textColor="@color/primaryTextColor"
-            android:textStyle="bold"
-            android:textSize="@dimen/text_size_2"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="10dp"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:maxLines="1"
-            android:alpha="0.6"
-            android:ellipsize="end"
-            style="@style/TextAppearance.AppCompat.Body2"
-            tools:text="休息休息12:09" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
