--- a/app/src/main/res/layout/hot_search_web_title.xml
+++ b/app/src/main/res/layout/hot_search_web_title.xml
@@ -52,12 +52,12 @@
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/rightImage"
             tools:visibility="visible"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_width="@dimen/ic_weight_height"
             android:layout_height="@dimen/ic_weight_height"
             android:clickable="true"
             android:background="?android:attr/selectableItemBackground"
-            android:src="@drawable/ic_more_vert_black_24dp"
+            android:src="@drawable/ic_baseline_share_24"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:scaleType="centerInside"
