--- a/PluginLibs/TestPlugin/src/main/res/layout/test_plugin_layout.xml
+++ b/PluginLibs/TestPlugin/src/main/res/layout/test_plugin_layout.xml
@@ -5,6 +5,7 @@
 
     <TextView
         android:id="@+id/tvTest"
+        android:textColor="@color/primaryColor"
         android:layout_gravity="center"
         android:text="我是插件中的 Activity 哟"
         android:layout_width="wrap_content"
