--- a/PluginLibs/TestPlugin/src/main/res/layout/test_plugin_layout.xml
+++ b/PluginLibs/TestPlugin/src/main/res/layout/test_plugin_layout.xml
@@ -2,13 +2,19 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <ImageView
+        android:id="@+id/ivTest"
+        android:src="@drawable/bg_body"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/tvTest"
-        android:textColor="@color/primaryColor"
+        android:textColor="@color/item_tag"
         android:layout_gravity="center"
         android:text="我是插件中的 Activity 哟"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+
 
 </FrameLayout>
