--- a/PluginLibs/TestPlugin/src/main/res/layout/test_plugin_layout.xml
+++ b/PluginLibs/TestPlugin/src/main/res/layout/test_plugin_layout.xml
@@ -8,8 +8,8 @@
         android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/tvTest"
-        android:textColor="@color/item_tag"
         android:layout_gravity="center"
+        android:textSize="50dp"
         android:text="我是插件中的 Activity 哟"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
