--- a/PluginLibs/TestPlugin/src/main/res/layout/test_plugin_layout.xml
+++ b/PluginLibs/TestPlugin/src/main/res/layout/test_plugin_layout.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/bg_body"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ImageView
-        android:id="@+id/ivTest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/tvTest"
         android:layout_gravity="center"
         android:textSize="50dp"
+        android:textColor="@color/item_tag"
         android:text="我是插件中的 Activity 哟"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
